# specfempp-digworm

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
src/python/specfempp_digworm/mesher/: lagrange.py
src/python/specfempp_digworm/mesher/dim2/model/: __init__.py  boundary.py  model.py
src/specfempp_digworm/: __init__.py
src/specfempp_digworm/_cpp_databasereader/: CMakeLists.txt  module.cpp
src/specfempp_digworm/mesher/: gmsh_dep.py
src/specfempp_digworm/mesher/dim2/: __init__.py  binary_detect_N3.py  exporter.py
src/specfempp_digworm/mesher/dim2/model/: edges.py  index_mapping.py  nonconforming_interfaces.py  physical_group.py  plotter.py
terrarium/: .gitignore  CMakeLists.txt
terrarium/manager/: builder.py
